<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="#444" >

        <TextView
            android:id="@+id/show_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="Add Preference"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/preferencesback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/show_content"
            android:layout_alignBottom="@+id/show_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_small" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginBottom="60dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/Make"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/spinner1"
                android:layout_marginTop="5dp"
                android:text="@string/Model"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/spinner2"
                android:layout_marginTop="5dp"
                android:text="@string/Year"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/spinner3"
                android:layout_marginTop="5dp"
                android:text="@string/Price"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/spinner4"
                android:layout_marginTop="5dp"
                android:text="@string/Mileage"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/spinner5"
                android:layout_marginTop="5dp"
                android:text="@string/Zips"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/zipeditText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView6"
                android:layout_marginTop="3dp"
                android:inputType="number"
                android:maxLength="5" >
            </EditText>

            <Button
                android:id="@+id/savebutton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/zipeditText1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/save_small" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/savebutton1"
                android:background="@drawable/cancel_small" />
        </RelativeLayout>
    </ScrollView>

    <GridView
        android:id="@+id/gridView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="3"
        android:visibility="gone" >
    </GridView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#444" >

        <Button
            android:id="@+id/car"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/popular" />

        <Button
            android:id="@+id/search"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_alignBaseline="@+id/car"
            android:layout_alignBottom="@+id/car"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/car"
            android:background="@drawable/searchfortab" />

        <Button
            android:id="@+id/preference"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_alignBaseline="@+id/search"
            android:layout_alignBottom="@+id/search"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/search"
            android:background="@drawable/preferences" />

        <Button
            android:id="@+id/mylist"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/preference"
            android:background="@drawable/mylist" />
    </RelativeLayout>

</RelativeLayout>