<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp" >

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1" >

            <TextView
                android:id="@+id/tv_seller_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="28dp"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                android:textSize="20px"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tv_seller_registration_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_seller_registration"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="First Name"
                android:inputType="textPersonName"
                android:maxLength="20" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/et_seller_registration_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_seller_registration_firstname"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="Last Name"
                android:maxLength="20" />

            <TextView
                android:id="@+id/tv_seller_registration_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_seller_registration_lastname"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textColor="#FFFFFF"
                android:textSize="20px"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_seller_registration_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_seller_registration_email"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLength="25" />

            <TextView
                android:id="@+id/tv_seller_registration_confirmemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_seller_registration_email"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="15dp"
                android:text="@string/confirmemail"
                android:textColor="#FFFFFF"
                android:textSize="20px"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_seller_registration_confirmemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_seller_registration_confirmemail"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="Confirm Email"
                android:inputType="textEmailAddress"
                android:maxLength="25" />

            <TextView
                android:id="@+id/tv_seller_registration_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_seller_registration_confirmemail"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="15dp"
                android:text="@string/phone"
                android:textColor="#FFFFFF"
                android:textSize="20px"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_seller_registration_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_seller_registration_phone"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="Phone"
                android:inputType="phone"
                android:maxLength="10" />

            <Button
                android:id="@+id/btn_seller_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_seller_registration_phone"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="28dp"
                android:background="@drawable/registration_clicked" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#444"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="User Registration"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/reg_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_alignParentLeft="true"
            android:background="@drawable/back_small" />
    </RelativeLayout>

</RelativeLayout>